tests/fixtures/invalid/link_without_url.desktop
[Desktop Entry]
Type=Link
Name=Link Without URL
# Missing required URL field for Link type
